--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head> <!--TESTING ON NEW GIT visible only on the URL tab or in the styling-->
+<head> <!--visible only on the URL tab or in the styling-->
 	<title>Hello, World!</title>
 	<link rel="shortcut icon" href="images/favicons/kCD.ico" type="image/x-icon"/>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
