returned closing brackets to div tags near and in footer

--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
 
 		</div> <!--CLOSES the "images_and_captions" div element-->
 
-	</div <!--CLOSES the "main_content_area" div element-->
+	</div> <!--CLOSES the "main_content_area" div element-->
 
-	<div id="footer_ribbon"
+	<div id="footer_ribbon">
 	
 		<div id="footer_content">
 			<p>&copy; 2016 <span class="student_name">STUDENT'S NAME HERE</span> (except with respect to images).</p>
