Named images more descriptively.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		<div id="images_and_captions"> <!--all the images and captions themselves-->
 
 			<div id="large_image_and_caption"> <!--the large image and caption-->
-				<img src="images/imagesForPage/JRVIMXKSYX-w.jpg" alt="Satellite hovering above a space body" title="Satellite hovering above a space body">
+				<img src="images/earth-satellite-w.jpg" alt="Satellite hovering above a space body" title="Satellite hovering above a space body">
 				<h2>"The curious satellite"</h2>
 				<p id="h2_subtext">I wonder what that satellite is doing... Is it helping with planetary communications? Or is it collecting data? Or is it a part of a whole network of satellites?</p>
 			</div>
@@ -44,19 +44,19 @@
 			<div id="three_smaller_ones" class="clearfix"> <!--three smaller images and captions-->
   
 				<div class="one_third"> <!--the first of the three images and captions-->
-					<img src="images/imagesForPage/J89UHR020S.jpg" alt="Colorful swirls in outer space" title="Colorful swirls in outer space">          
+					<img src="images/orange-burnt.jpg" alt="Colorful swirls in outer space" title="Colorful swirls in outer space">          
 					<h3>Which Crayola colors are those?</h3>
 					<p class="h3_subtext">The colors in space are beautiful. Wonder whether the colors look the same to astronauts who are right there looking out their rocket windows?</p>
 				</div>
    
 				<div class="one_third"> <!--the second of the three images and captions-->
-					<img src="images/imagesForPage/ZFFIJZIOIZ.jpg" alt="Astronaut in space" title="Astronaut in space">             
+					<img src="images/astronaut-floating.jpg" alt="Astronaut in space" title="Astronaut in space">             
 					<h3>"Astronaut at work"</h3>
 					<p class="h3_subtext">Wonder how long it takes an astronaut to get dressed for work? At the very least, they need to make sure their suits are sealed tight.</p>
 				</div>
 
 				<div class="one_third" id="last_third"> <!--the third and last of the three images and captions-->
-					<img src="images/imagesForPage/KGSTJH2CB7.jpg" alt="Dark space body with lights" title="Dark space body with lights">
+					<img src="images/earth-dark-lights.jpg" alt="Dark space body with lights" title="Dark space body with lights">
 					<h3>"Is that Earth?"</h3>
 					<p class="h3_subtext">Whatever it is, it makes an intriguing picture.</p>
 				</div>
