--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head> <!--visible only on the URL tab or in the styling-->
 	<meta charset="utf-8">
 	<title>Hello, World!</title>
-	<link rel="shortcut icon" href="images/favicons/kCD.ico" type="image/x-icon"/>
+	<link rel="shortcut icon" href="images/favicon-kCD.ico" type="image/x-icon"/>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 
