--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<div id="three_smaller_ones" class="clearfix"> <!--three smaller images and captions-->
   
 				<div class="one_third"> <!--the first of the three images and captions-->
-					<img src="images/oranges-crayola.jpg" alt="Colorful swirls in outer space" title="Colorful swirls in outer space">          
+					<img src="images/orange-puffy.jpg" alt="Colorful swirls in outer space" title="Colorful swirls in outer space">          
 					<h3>Which Crayola colors are those?</h3>
 					<p class="h3_subtext">The colors in space are beautiful. Wonder whether the colors look the same to astronauts who are right there looking out their rocket windows?</p>
 				</div>
